--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,9 @@ default: &default
 
 development:
   <<: *default
+  adapter: jdbcsqlite3
   database: db/development.sqlite3
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
